--- a/netbox_juniper/templates/netbox_juniper/firewallfilter.html
+++ b/netbox_juniper/templates/netbox_juniper/firewallfilter.html
@@ -1,10 +1,9 @@
 {% extends 'generic/object.html' %}
-
 {% block content %}
   <div class="row mb-3">
     <div class="col col-md-6">
       <div class="card">
-        <h5 class="card-header">Firewall Filter</h5>
+        <h5 class="card-header">Access List</h5>
         <div class="card-body">
           <table class="table table-hover attr-table">
             <tr>
@@ -12,8 +11,8 @@
               <td>{{ object.name }}</td>
             </tr>
             <tr>
-              <th scope="row">Description</th>
-              <td>{{ object.description | placeholder }}</td>
+              <th scope="row">Device</th>
+              <td>{{ object.device }}</td>
             </tr>
           </table>
         </div>
