update policer model

--- a/netbox_juniper/templates/netbox_juniper/firewallpolicer.html
+++ b/netbox_juniper/templates/netbox_juniper/firewallpolicer.html
@@ -14,6 +14,27 @@
               <th scope="row">Device</th>
               <td>{{ object.device }}</td>
             </tr>
+            <tr>
+              <th scope="row">Filter Specific</th>
+              <td>{{ object.filter_specific }}</td>
+            </tr>
+            <tr>
+              <th scope="row">Bandwidth Limit</th>
+              <td>{{ object.bw_limit }}</td>
+            </tr>
+            <tr>
+              <th scope="row">Bandwidth Percent</th>
+              <td>{{ object.bw_percent }}</td>
+            </tr>
+            <tr>
+              <th scope="row">Burst Size Limit</th>
+              <td>{{ object.burst_limit }}</td>
+            </tr>
+
+            <tr>
+              <th scope="row">Action</th>
+              <td>{{ object.action }}</td>
+            </tr>
           </table>
         </div>
       </div>
