--- a/netbox_juniper/templates/netbox_juniper/applicationset.html
+++ b/netbox_juniper/templates/netbox_juniper/applicationset.html
@@ -25,8 +25,8 @@
             <tr>
               <th scope="row">Applications</th>
               <td>
-                {% for set in object.application.all %}
-                {{ set }}<br />
+                {% for app in object.application.all %}
+                {{ app | linkify | placeholder }}<br />
                 {% endfor %}
               </td>
             </tr>
